--- a/wisdomCampus/html/mine/modifyPassword.html
+++ b/wisdomCampus/html/mine/modifyPassword.html
@@ -118,7 +118,7 @@
 						access_token: personal.utoken //用户令牌
 					};
 					events.showWaiting();
-					postDataEncry(0, 'upUserInfo', {}, comData0, 0, function(data3) {
+					postDataEncry(0, 'api/user/upUserInfo', {}, comData0, 0, function(data3) {
 						console.log('data3:' + JSON.stringify(data3));
 						events.closeWaiting();
 						if(data3.RspCode == 0) {
