--- a/wisdomCampus/html/mine/modifyPassword.html
+++ b/wisdomCampus/html/mine/modifyPassword.html
@@ -103,9 +103,9 @@
 				} else if(params.newPassword === params.oldPassword) {
 					mui.toast('新密码不能与旧密码相同');
 				} else if(!checkPass(params.newPassword)) {
-					mui.toast('密码需为数字和字母的组合');
+					mui.toast('密码需为6到18位数字和字母的组合');
 				} else if(params.newPassword.length > 18 || params.newPassword.length < 6) {
-					mui.toast('密码长度需为6到18个字符');
+					mui.toast('密码需为6到18位数字和字母的组合');
 				} else {
 					//握手
 					var enData0 = {};
