--- a/wisdomCampus/html/index/home.html
+++ b/wisdomCampus/html/index/home.html
@@ -375,7 +375,7 @@
 //					} else {}
 //				});
 //			}
-			window.addEventListener('setHeadImg', function(data) {
+			window.addEventListener('mine_setHeadImg', function(data) {
 				console.log("data" + JSON.stringify(data.detail.imgurl))
 				mine.userImg = data.detail.imgurl;
 				mine1.userImg = data.detail.imgurl;
