--- a/wisdomCampus/html/index/login.html
+++ b/wisdomCampus/html/index/login.html
@@ -261,6 +261,7 @@
 			if (tempData.grds == null) {
 				tempData.grds = [];
 			}
+			tempData.clss = tempData.clss.concat(tempData.masterclss);
 			
 			delete tempData['user'];
 			
