注册功能基本完成

--- a/wisdomCampus/html/index/login.html
+++ b/wisdomCampus/html/index/login.html
@@ -123,7 +123,7 @@
 		
 		//注册按钮
 		document.getElementById('zhuce').addEventListener('tap',function () {
-		        utils.hrefSessionStorage('register.html', {});
+			utils.mOpenWithData("../../html/index/register.html", tempModel);
 		})
 
 		//获取秘钥
