--- a/wisdomCampus/html/index/register.html
+++ b/wisdomCampus/html/index/register.html
@@ -6,7 +6,7 @@
 		<title></title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../../css/mui.min.css" rel="stylesheet" />
-		<link rel="stylesheet" href="../../css/utils/common.css" />
+		<!--<link rel="stylesheet" href="../../css/utils/common.css" />-->
 		<link rel="stylesheet" href="../../fonts/iconfont1.css" />
 		<link rel="stylesheet" href="../../css/mui.picker.min.css" />
 		<link href="../../css/mui.poppicker.css" rel="stylesheet" />
@@ -55,20 +55,20 @@
 				width: 110px;
 			}
 			
-			.icon-right{
-				    position: fixed;
-				    float: right;
-				    font-size: 14px;
-				    margin-top: 11px;
-				    right: 10px;
+			.icon-right {
+				position: fixed;
+				float: right;
+				font-size: 14px;
+				margin-top: 11px;
+				right: 10px;
 			}
 			
-			.code-btn{
+			.code-btn {
 				background: #63BBFF !important;
-				border:none;
-				border-radius:25px;
+				border: none;
+				border-radius: 25px;
 				height: 25px;
-				width:90px;
+				width: 90px;
 				font-size: 10px;
 				padding: 4px 15px;
 				margin-top: -33px;
@@ -87,15 +87,15 @@
 				min-height: 44px;
 			}
 			
-			
 			.mui-checkbox input[type=checkbox]:checked:before {
 				color: #00cfbd;
 			}
 			
-			.mui-input-row label~input, input::-webkit-input-placeholder {
-				 color: #999;
-		         /* placeholder字体大小  */
-		         font-size: 14px;
+			.mui-input-row label~input,
+			input::-webkit-input-placeholder {
+				color: #999;
+				/* placeholder字体大小  */
+				font-size: 14px;
 			}
 			
 			.mui-navigate-right.rCss.no-icon:after {
@@ -111,21 +111,20 @@
 			}
 			
 			.mui-table-view:after {
-			    height: 0px;
+				height: 0px;
 			}
 			
 			.mui-input-row:after {
-			    position: absolute;
-			    right: 0;
-			    bottom: 0;
-			    left: 0;
-			    height: 1px;
-			    content: '';
-			    -webkit-transform: scaleY(.5);
-			    transform: scaleY(.5);
-			    background-color: #e4e4e4;
+				position: absolute;
+				right: 0;
+				bottom: 0;
+				left: 0;
+				height: 1px;
+				content: '';
+				-webkit-transform: scaleY(.5);
+				transform: scaleY(.5);
+				background-color: #e4e4e4;
 			}
-			
 		</style>
 	</head>
 
@@ -135,46 +134,46 @@
 			<h1 class="mui-title" style="color: white;">注 册</h1>
 		</header>
 		<div id="register-body" class="mui-content" style="background: white;">
-				<div style="background-color: #F2F2F2;height: 10px;"></div>
-				<div class="mui-input-row">
-					<label class="aCss"  @tap="selectUType()">用户类型</label>
-					<input type="text" @tap="selectUType()" placeholder="请选择"  v-model="utype" readonly  >
-					<span class="mui-icon mui-icon-arrowdown icon-right"></span>
-				</div>
-				<div class="mui-input-row">
-					<label class="aCss">用户姓名</label>
-					<input type="text" placeholder="请输入姓名"  v-model="uname">
-				</div>
-				<div class="mui-input-row">
-					<label class="aCss">用户电话</label>
-					<input type="number" maxlength="11" placeholder="请输入电话" onkeyup="clearNoNum(this)" v-model="uphone">
-				</div>
-				<div style="background-color: #F2F2F2;height: 10px;"></div>
-				<div class="mui-input-row">
-					<label class="aCss"  @tap="selectSchool()">所属学校</label>
-					<input type="text" @tap="selectSchool()" placeholder="请选择"  v-model="uschool" readonly  >
-					<span class="mui-icon mui-icon-arrowdown icon-right"></span>
-				</div>
-				<div style="background-color: #F2F2F2;height: 10px;"></div>
-				<div class="mui-input-row">
-					<label class="aCss">用户账号</label>
-					<input type="text" placeholder="请输入账号" v-model="uaccount">
-				</div>
-				<div class="mui-input-row">
-					<label class="aCss">请输入密码</label>
-					<input type="password" placeholder="请输入密码" v-model="upassword">
-				</div>
-				<div class="mui-input-row">
-					<label class="aCss">确认密码</label>
-					<input type="password" placeholder="确认密码" v-model="confirmpassword">
-				</div>
-				<div class="mui-input-row">
-					<label class="aCss">验证码</label>
-					<input type="number" placeholder="请输入验证码" v-model="code">
-				</div>
-				<div>
-					<button id='idenCodebtn' @click="getPhoneCode" type="button" class="mui-btn mui-btn-block mui-btn-primary code-btn">发送验证码</button>
-				</div>
+			<div style="background-color: #F2F2F2;height: 10px;"></div>
+			<div class="mui-input-row">
+				<label class="aCss" @tap="selectUType()">用户类型</label>
+				<input type="text" @tap="selectUType()" placeholder="请选择" v-model="utype" readonly>
+				<span class="mui-icon mui-icon-arrowdown icon-right"></span>
+			</div>
+			<div class="mui-input-row">
+				<label class="aCss">用户姓名</label>
+				<input type="text" placeholder="请输入姓名" @blur="getUserInfo()" v-model="uname">
+			</div>
+			<div class="mui-input-row">
+				<label class="aCss">用户电话</label>
+				<input type="number" maxlength="11" placeholder="请输入电话" @blur="getUserInfo()" onkeyup="clearNoNum(this)" v-model="uphone">
+			</div>
+			<div style="background-color: #F2F2F2;height: 10px;"></div>
+			<div class="mui-input-row">
+				<label class="aCss" @tap="selectSchool()">所属学校</label>
+				<input type="text" @tap="selectSchool()" placeholder="请选择" v-model="uschool" readonly>
+				<span class="mui-icon mui-icon-arrowdown icon-right"></span>
+			</div>
+			<div style="background-color: #F2F2F2;height: 10px;"></div>
+			<div class="mui-input-row">
+				<label class="aCss">用户账号</label>
+				<input type="text" placeholder="请输入账号" v-model="uaccount">
+			</div>
+			<div class="mui-input-row">
+				<label class="aCss">请输入密码</label>
+				<input type="password" placeholder="请输入密码" v-model="upassword">
+			</div>
+			<div class="mui-input-row">
+				<label class="aCss">确认密码</label>
+				<input type="password" placeholder="确认密码" v-model="confirmpassword">
+			</div>
+			<!--<div class="mui-input-row">
+				<label class="aCss">验证码</label>
+				<input type="number" placeholder="请输入验证码" v-model="code">
+			</div>
+			<div>
+				<button id='idenCodebtn' @click="getPhoneCode" type="button" class="mui-btn mui-btn-block mui-btn-primary code-btn">发送验证码</button>
+			</div>-->
 			<div style="bottom: 0;position: fixed;width: 95%;margin: 0 2.5%;">
 				<button id='idenCodebtn' @click="submit" type="button" class="mui-btn mui-btn-block mui-btn-primary" style="background: #63BBFF;border: 0;height: 36px;font-size: 15px;line-height: 0;">确 定</button>
 			</div>
@@ -194,110 +193,163 @@
 		<script src="../../js/utils/mui.poppicker.js"></script>
 		<script type="text/javascript">
 			var $M = mui.init();
-			mui.plusReady(function() {});
+			var userTypePicker = new $M.PopPicker();
+			var schoolPicker = new $M.PopPicker();
+			var tempType = '';
+			var tempName = '';
+			var tempPhone = '';
+			mui.plusReady(function() {
+				//用户注册获取可选用户类型列表
+				getUserType();
+			});
+			//14.用户注册获取可选用户类型列表
+			var getUserType = function() {
+				//握手
+				var enData0 = {};
+				//不需要加密的数据
+				var comData0 = {
+					platform_code: window.storageKeyName.PLATFORMCODE, //平台代码
+					app_code: window.storageKeyName.APPCODE //应用系统代码
+				};
+				var wd = events.showWaiting();
+				//发送网络请求，data为网络返回值
+				postDataEncry(0, 'api/login/getRegUserTypeList', enData0, comData0, 0, function(data) {
+					wd.close();
+					console.log('getRegUserTypeList:' + JSON.stringify(data));
+					if(data.RspCode == 0) {
+						var tempA = [];
+						for(var i = 0; i < data.RspData.length; i++) {
+							var tempM = data.RspData[i];
+							var tempM1 = {
+								text: tempM.name,
+								value: tempM.code,
+								id: tempM.id
+							}
+							if(i == 0) {
+								register.utype = tempM.name;
+								register.utype_value = tempM.code;
+							}
+							tempA.push(tempM1);
+						}
+						userTypePicker.setData(tempA);
+						setTimeout(function() {
+							userTypePicker.pickers[0].setSelectedValue(register.utype_value);
+						}, 100);
+					} else {
+						mui.toast(data.RspTxt);
+					}
+				});
+			}
+
 			var register = new Vue({
 				el: '#register-body',
 				data: {
-					utype: '请选择',//用户类型
-					utype_value: '',//用户类型 选择值
-					uname: '',//用户姓名
-					uphone: '',//用户电话
-					uschool: '请选择',//所属学校
-					uschool_value: '',//所属学校 选择值
-					uaccount: '',//用户账号
-					upassword: '',//用户密码
-					confirmpassword: '',//确认密码
-					code: ''//验证码
+					utype: '请选择', //用户类型
+					utype_value: '', //用户类型 选择值
+					uname: '', //用户姓名
+					uphone: '', //用户电话
+					uschool: '请选择', //所属学校
+					uschool_value: '', //所属学校 选择值
+					userid: 0, //所属学校 用户id
+					uaccount: '', //用户账号
+					upassword: '', //用户密码
+					confirmpassword: '', //确认密码
+					code: '' //验证码
 				},
 				methods: {
-					selectUType:function(){//选择身份
+					selectUType: function() { //选择身份
 						document.activeElement.blur();
-						//普通示例
-						var userPicker = new $M.PopPicker();
-						userPicker.setData([{
-							value: 'ywj',
-							text: '董事长 叶文洁'
-						}, {
-							value: 'aaa',
-							text: '总经理 艾AA'
-						}, {
-							value: 'lj',
-							text: '罗辑'
-						}, {
-							value: 'ymt',
-							text: '云天明'
-						}, {
-							value: 'shq',
-							text: '史强'
-						}, {
-							value: 'zhbh',
-							text: '章北海'
-						}, {
-							value: 'zhy',
-							text: '庄颜'
-						}, {
-							value: 'gyf',
-							text: '关一帆'
-						}, {
-							value: 'zhz',
-							text: '智子'
-						}, {
-							value: 'gezh', 
-							text: '歌者'
-						}]);
-						userPicker.show(function(items) {
-							register.utype=items[0].text;
-							register.utype_value=items[0].value;
+						userTypePicker.show(function(items) {
+							register.utype = items[0].text;
+							register.utype_value = items[0].value;
 							//返回 false 可以阻止选择框的关闭
 							//return false;
 						});
 					},
-					selectSchool: function() {//选择所属学校
-						document.activeElement.blur();
-						//普通示例
-						var userPicker = new $M.PopPicker();
-						userPicker.setData([{
-							value: 'ywj',
-							text: '董事长 叶文洁'
-						}, {
-							value: 'aaa',
-							text: '总经理 艾AA'
-						}, {
-							value: 'lj',
-							text: '罗辑'
-						}, {
-							value: 'ymt',
-							text: '云天明'
-						}, {
-							value: 'shq',
-							text: '史强'
-						}, {
-							value: 'zhbh',
-							text: '章北海'
-						}, {
-							value: 'zhy',
-							text: '庄颜'
-						}, {
-							value: 'gyf',
-							text: '关一帆'
-						}, {
-							value: 'zhz',
-							text: '智子'
-						}, {
-							value: 'gezh', 
-							text: '歌者'
-						}]);
-						userPicker.show(function(items) {
-							register.uschool=items[0].text;
-							register.uschool_value=items[0].value;
-							//返回 false 可以阻止选择框的关闭
-							//return false;
-						});
+					getUserInfo: function() {
+						if(register.utype_value == '') {} else if(register.uname == '') {} else if(register.uphone == '') {
+
+						} else if(!isPhone(register.uphone)) {
+							mui.toast('请输入正确的用户电话');
+						} else {
+							var tempFlag = 0;
+							if(register.utype_value != tempType) {
+								tempType = register.utype_value;
+								tempFlag++;
+							}
+							if(register.uname != tempName) {
+								tempName = register.uname;
+								tempFlag++;
+							}
+							if(register.uphone != tempPhone) {
+								tempPhone = register.uphone;
+								tempFlag++;
+							}
+							if(tempFlag > 0) {
+								//获取所属学校
+								var enData0 = {};
+								//不需要加密的数据
+								var comData0 = {
+									user_type: register.utype_value, //用户类型
+									name: register.uname, //姓名，注册老师的时候输入老师的姓名，注册学生和家长时输入学生姓名
+									phone: register.uphone //电话，注册老师的时候输入老师的姓名，注册学生和家长时输入家长电话
+								};
+								var wd = events.showWaiting();
+								//发送网络请求，data为网络返回值
+								postDataEncry(1, 'api/register/userInfo', enData0, comData0, 0, function(data) {
+									console.log('register/userInfo:' + JSON.stringify(data));
+									wd.close();
+									if(data.RspCode == 0) {
+										var tempA = [];
+										for(var i = 0; i < data.RspData.length; i++) {
+											var tempM = data.RspData[i];
+											tempM.text = tempM.schname;
+											tempM.value = tempM.schid;
+											if(i == 0) {
+												register.uschool = tempM.schname;
+												register.uschool_value = tempM.schid;
+												register.userid = tempM.userid;
+											}
+											tempA.push(tempM);
+										}
+										schoolPicker.setData(tempA);
+										setTimeout(function() {
+											schoolPicker.pickers[0].setSelectedValue(register.uschool_value);
+										}, 100);
+									} else {
+										mui.toast(data.RspTxt);
+									}
+								});
+							}
+						}
 					},
-					getPhoneCode:function(){//点击按钮获取验证码
+					selectSchool: function() { //选择所属学校
+						document.activeElement.blur();
+						if(register.utype_value == '') {
+							mui.toast('请选择用户类型');
+						} else if(register.uname == '') {
+							mui.toast('请输入用户姓名');
+						} else if(register.uphone == '') {
+							mui.toast('请输入用户电话');
+						} else if(!isPhone(register.uphone)) {
+							mui.toast('请输入正确的用户电话');
+						} else {
+							if(register.userid > 0) {
+								schoolPicker.show(function(items) {
+									console.log('items:' + JSON.stringify(items[0]));
+									register.uschool = items[0].text;
+									register.uschool_value = items[0].value;
+									register.userid = items[0].userid;
+								});
+							} else {
+								mui.toast('没有可供选择的学校');
+							}
+						}
+					},
+					getPhoneCode: function() { //点击按钮获取验证码
 						console.log('发送验证码按钮')
 					},
-					submit:function(){//提交数据
+					submit: function() { //提交数据
 						console.log(register.utype_value)
 						if(register.utype_value == '') {
 							mui.toast('请选择用户类型');
@@ -311,31 +363,55 @@
 							mui.toast('请选择所属学校');
 						} else if(register.uaccount == '') {
 							mui.toast('请输入用户账号');
-						} else if(escape(register.uaccount).indexOf("%u") !=-1 && register.uaccount.length>8){
+						} else if(escape(register.uaccount).indexOf("%u") != -1 && register.uaccount.length > 8) {
 							mui.toast('中文长度不能超过8位');
-						} else if(register.uaccount.length>18){
+						} else if(register.uaccount.length > 18) {
 							mui.toast('字符长度不能超过18位');
 						} else if(register.upassword == '') {
 							mui.toast('请输入用户密码');
 						} else if(register.confirmpassword == '') {
 							mui.toast('请确认密码');
-						} else if(!(register.upassword  === register.confirmpassword)) {
+						} else if(!(register.upassword === register.confirmpassword)) {
 							mui.toast('两次输入的密码不一致');
 						} else if(!checkPass(register.confirmpassword)) {
 							mui.toast('密码需为数字和字母的组合');
 						} else if(register.confirmpassword.length > 18 || register.confirmpassword.length < 6) {
 							mui.toast('密码长度需为6到18个字符');
-						} else if(register.code == '' || register.code.length != 6) {
-							mui.toast('请输入正确的验证码');
-						} else{
-							console.log('验证通过')
+						} 
+//						else if(register.code == '' || register.code.length != 6) {
+//							mui.toast('请输入正确的验证码');
+//						} 
+						else {
+							console.log('验证通过');
+							//2.13.用户注册
+							var enData0 = {};
+							//不需要加密的数据
+							var comData0 = {
+								app_code: window.storageKeyName.APPCODE, //应用系统代码
+								user_id: register.userid, //用户id
+								user_type: register.utype_value, //用户类型
+								name: register.uname, //姓名
+								phone: register.uphone, //电话
+								login_name: register.uaccount, //登录名
+								password: register.confirmpassword, //密码,秘钥+密码再MD5加密
+							};
+							var wd = events.showWaiting();
+							//发送网络请求，data为网络返回值
+							postDataEncry(1, 'api/register', enData0, comData0, 0, function(data) {
+								console.log('register:' + JSON.stringify(data));
+								wd.close();
+								if(data.RspCode == 0) {
+									mui.toast(data.RspTxt);
+									mui.back();
+								} else {
+									mui.toast(data.RspTxt);
+								}
+							});
 						}
 					}
 				}
 			});
 
-			
-			
 			// 判断是否为手机号  
 			function isPhone(phone) {
 				var phoneReg = /^[1][3,4,5,7,8][0-9]{9}$/;
@@ -345,7 +421,7 @@
 					return false;
 				}
 			}
-	
+
 			//判断字符串是否为数字和字母组合
 			function checkPass(password) {
 				var re = /^(?!([a-zA-Z]+|\d+)$)[a-zA-Z\d]{6,20}$/g;
@@ -355,11 +431,11 @@
 					return true;
 				}
 			}
-			
+
 			//只保留小数点后一位
-			function clearNoNum(obj){ 
-			    obj.value = obj.value.replace(/[^\d]/g,"");  //清除“数字”和“.”以外的字符  
-			} 
+			function clearNoNum(obj) {
+				obj.value = obj.value.replace(/[^\d]/g, ""); //清除“数字”和“.”以外的字符  
+			}
 		</script>
 	</body>
 
