--- a/wisdomCampus/html/index/register.html
+++ b/wisdomCampus/html/index/register.html
@@ -191,6 +191,7 @@
 		<script src="../../js/publicProtocol.js"></script>
 		<script src="../../js/utils/mui.picker.js"></script>
 		<script src="../../js/utils/mui.poppicker.js"></script>
+		<script src='../../js/md5.js'></script>
 		<script type="text/javascript">
 			var $M = mui.init();
 			var userTypePicker = new $M.PopPicker();
@@ -198,7 +199,9 @@
 			var tempType = '';
 			var tempName = '';
 			var tempPhone = '';
+			var curPage;
 			mui.plusReady(function() {
+				curPage = utils.getDataFromUrl(window.location.href);
 				//用户注册获取可选用户类型列表
 				getUserType();
 			});
@@ -393,7 +396,7 @@
 								name: register.uname, //姓名
 								phone: register.uphone, //电话
 								login_name: register.uaccount, //登录名
-								password: register.confirmpassword, //密码,秘钥+密码再MD5加密
+								password: hex_md5(curPage.key + register.confirmpassword), //密码,秘钥+密码再MD5加密
 							};
 							var wd = events.showWaiting();
 							//发送网络请求，data为网络返回值
